--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,24 +1,36 @@
 body {
+    padding: 0%;
+    margin: 0%;
     background-color: black;
     color: whitesmoke;
 }
 
 main {
-    display: flex;
-    height: 80%;
-    width: 95%;
-    margin: 2%;
-    padding: 3%;
+    padding: 1%;
 }
 
 .landSection{
-    width: 25%;
+    width: 95%;
+    margin: 1%;
+    padding: 1%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.landSection p {
     margin: 1%;
 }
 
+.landSection input {
+    width: 90%;
+}
+
 .inputSection {
-    width: 75%;
+    width: 100%;
     margin: 1%;
+    padding: 1%;
     display: flex;
     flex-wrap: wrap;
 }
@@ -27,7 +39,7 @@ main {
     display: flex;
     flex-direction: row-reverse;
 
-    width: 30%;
+    width: 42%;
     padding: 1%;
     margin: 1%;
     border-radius: 3%;
