--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,17 +1,15 @@
+html {
+    background: url("/IMG/blightstep.jpg") no-repeat center center fixed;
+    background-size: cover;
+}
+
 body {
     padding: 0%;
     margin: 0%;
-    background-color: black;
     color: whitesmoke;
 }
 
 main {
-    padding: 1%;
-}
-
-.landSection{
-    width: 95%;
-    margin: 1%;
     padding: 1%;
     display: flex;
     flex-wrap: wrap;
@@ -19,20 +17,29 @@ main {
     align-items: center;
 }
 
-.landSection p {
+.landSection{
+    width: 87%;
     margin: 1%;
+    padding: 2%;
+    border-radius: 3%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
 
 .landSection input {
-    width: 90%;
+    width: 97%;
+    font-size: 4em;
+    text-align: center;
 }
 
 .inputSection {
     width: 100%;
-    margin: 1%;
-    padding: 1%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-self: center;
 }
 
 .inputSection div {
@@ -57,6 +64,39 @@ main {
     margin: 1%;
     font-size: 5em;
     text-align: center;
+    border: solid;
+    border-color: gainsboro;
+}
+
+.outSection {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-self: center;
+}
+
+.outSection div {
+    width: 10%;
+    height: 10%;
+    padding: 1%;
+    margin: 1.5%;
+}
+
+.outSection div p {
+    font-size: 5em;
+    text-align: center;
+    background-color: whitesmoke;
+    border: solid;
+    border-color: gainsboro;
+    color: black;
+    margin: 0%;
+}
+
+#lSec {
+    background-color: #75675d;
+    border: solid;
+    border-color: #38302a;
 }
 
 .rSec {
@@ -93,4 +133,16 @@ main {
     background-color: #7B8FA1;
     border: solid;
     border-color:#567189;
+}
+
+@media only screen and (min-width: 992px) {
+    .inputSection div {
+        display: flex;
+        flex-direction: row-reverse;
+    
+        width: 25%;
+        padding: 1%;
+        margin: 1%;
+        border-radius: 3%;
+    }
 }
